Fix: Parallax clip, ScrollBar size

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -7,7 +7,6 @@ header {
 }
 
 nav {
-  z-index: 10;
   position: absolute;
   z-index: 1030;
   inset: 0 15px auto 0;
