--- a/src/styles/scss/elements.scss
+++ b/src/styles/scss/elements.scss
@@ -1,9 +1,10 @@
 @import "./variables";
 
-// ScrollBar:
+// Basic Elements:
 #scrollingPXcon {
   &::-webkit-scrollbar {
-    width: 15px;
+    -webkit-appearance: none;
+    width: 2px;
     background-image: linear-gradient(45deg, $base-color-gray-15, $base-color);
   }
   &::-webkit-scrollbar-thumb {
@@ -17,8 +18,6 @@
     box-shadow: rgba(0, 0, 0, 0.5) 0 0 20px 3px;
   }
 }
-
-// Basic Elements:
 
 button {
   font-size: 1rem;
@@ -54,4 +53,28 @@ textarea {
 
 .error {
   color: $secund-base-FS;
+}
+
+// ScrollBar:
+@media screen and (min-width: 1280px) {
+  #scrollingPXcon {
+    &::-webkit-scrollbar {
+      width: 15px;
+      background-image: linear-gradient(
+        45deg,
+        $base-color-gray-15,
+        $base-color
+      );
+    }
+    &::-webkit-scrollbar-thumb {
+      background-image: linear-gradient(
+        45deg,
+        $base-color-gray-15,
+        $secund-base-color
+      );
+      border-radius: 10px;
+      -webkit-box-shadow: rgb(0, 0, 0.5) 0 0 20px 1px;
+      box-shadow: rgba(0, 0, 0, 0.5) 0 0 20px 3px;
+    }
+  }
 }
